--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <a href="#about" class="nav-item nav-link">About</a>
             <a href="#service" class="nav-item nav-link">Service</a>
             <a href="#experience" class="nav-item nav-link">Experience</a>
+            <a href="#experience" class="nav-item nav-link">Education</a>
             <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
             <a href="#review" class="nav-item nav-link">Review</a>
             <a href="#team" class="nav-item nav-link">Team</a>
