--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="#about" class="nav-item nav-link">About</a>
             <a href="#service" class="nav-item nav-link">Service</a>
             <a href="#experience" class="nav-item nav-link">Experience</a>
-            <a href="#experience" class="nav-item nav-link">Education</a>
+            <a href="#education" class="nav-item nav-link">Education</a>
             <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
             <a href="#review" class="nav-item nav-link">Review</a>
             <a href="#team" class="nav-item nav-link">Team</a>
@@ -510,7 +510,7 @@
 
 
     <!-- Education Start -->
-    <div class="experience" id="experience">
+    <div class="experience" id="education">
       <div class="container">
         <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
           <p>My Education</p>
