--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 
 
     <!-- Education Start -->
-    <div class="experience" id="education">
+    <div class="education" id="education">
       <div class="container">
         <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
           <p>My Education</p>
